# hushtype

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  hushtype.py  hushtype.spec  pyproject.toml  requirements.txt  runtime_hook.py
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: labeler.yml  release.yml  stale.yml  welcome.yml
hooks/: hook-webrtcvad.py
