[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hushtype"
version = "1.0.0"
description = "Real-time voice dictation for Windows — GPU-accelerated Whisper speech-to-text with voice commands"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "turqoisehex"},
]
keywords = [
    "voice-dictation", "speech-to-text", "whisper", "dictation",
    "voice-typing", "stt", "nvidia", "gpu", "windows", "realtime",
    "voice-commands", "accessibility",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
    "Topic :: Accessibility",
]
dependencies = [
    "RealtimeSTT>=0.3.104",
    "pyautogui>=0.9.54",
    "PyAudio>=0.2.14",
    "pywin32>=306",
]

[project.urls]
Homepage = "https://github.com/turqoisehex/hushtype"
Repository = "https://github.com/turqoisehex/hushtype"
"Bug Tracker" = "https://github.com/turqoisehex/hushtype/issues"

[project.scripts]
hushtype = "hushtype:main"

[tool.setuptools]
py-modules = ["hushtype"]
